refactor: clean up URI validation code